# generate_trajectories_remaro

./: README.md
uuv_disturbance_trajectory/: CMakeLists.txt  package.xml
uuv_disturbance_trajectory/config/: JammedThruster.yaml  disturbances.yaml  disturbances3.yaml  disturbances4.yaml  pipeline_waypoints.yaml  waypoints2.yaml
uuv_disturbance_trajectory/launch/: auv_custom_disturbance_manager.launch  custom_disturbance_manager.launch  helical_trajectory_disturbance_manager.launch  remaro_helical_trajectory_disturbance_manager.launch  remaro_world_disturbance_manager.launch  remaro_world_with_disturbance_manager.launch  remaro_world_without_disturbance_manager.launch  without_disturbance_manager.launch
uuv_disturbance_trajectory/script/: simple_run_task.py  thruster_failure.py
wreckedship_survey/: CHANGELOG.rst  CMakeLists.txt  package.xml
wreckedship_survey/config/: dead_thruster.yaml  efficiency_thruster.yaml
wreckedship_survey/launch/: hercule_wreckship_world_with_disturbance.launch
wreckedship_survey/output/csv_files/: bagfile-_rexrov_ground_truth_to_tf_rexrov_pose.csv
wreckedship_survey/script/: assessing_trajectory.py  convert_bag2csv.py
